# cookbook4python

./: Makefile  ProjectHome.md  YahooBridgeCardCounter.md  ai.py  contractBridge.md  converHPGLtoPng.md  defs.py.in  floater-console-client.py  floater-web-client.py  ipyreadline.md  realine_callback.md
cookbook4python/floater/: Jamfile  Jamsettings  config.status  configure  configure.ac
cookbook4python/floater/art/: README.txt
cookbook4python/floater/art/auction/: auction_images.c  c-12.uu  h-12.uu  n-12.uu  s-12.uu
cookbook4python/floater/art/bitmaps/: c_3c._  c_3s._  c_4s._  c_5h._  c_6h._  c_7s._  c_8c._  c_8d._  c_as._  c_back_pagoda._  c_kc._  c_qh._  c_td._
cookbook4python/floater/art/icons/: floater-24.xcf  floater-48.xpm  icon_images.c
cookbook4python/floater/common/: Makefile.extra  UI.h  autohelp1.c  autohelp2.c  commandhash.c  config.h  main.c  message.h  mkautohelp  score.c  tcl2c  tickler.h  util.h  winMain.c  wtcl2c
cookbook4python/floater/debian/: changelog  control  copyright  floater-server.dirs  floater.menu
cookbook4python/floater/documentation/building/: Debian.txt
cookbook4python/floater/documentation/reference/: ref.dvi  ref.ps  ref.txt
cookbook4python/floater/documentation/tutorial/: curses2text.c  gtextscreen1.txt  gtextscreen11.txt  gtextscreen11.txt.txt  gtextscreen14.txt  gtextscreen2.txt  gtextscreen20.txt.txt  gtextscreen23.txt  gtextscreen23.txt.txt  gtextscreen26.txt  gtextscreen26.txt.txt  gtextscreen27.txt  gtextscreen3.txt.txt  log2html.tcl  screen1  screen11  screen11.txt  screen12  screen17.txt  screen20.txt  screen21  screen24  screen26.txt  screen4.txt  screen5  screen5.txt  screen7  screen9  textscreen13.txt.txt  textscreen15.txt.txt  textscreen24.txt  tut.html
cookbook4python/floater/loginserver/: UIback.c  autohelp2.c  comm.h  floatcl1.c  maximize.c  score.h  stringlist.c
cookbook4python/floater/pseudomailer/: Jamfile  UI.h  br.c  floatcl.c  floaterpm  help.h  maximize.h  winMain.c
cookbook4python/floater/res2html/: Makefile.pre-setup  commandhash.h  floatcl2.c  res2html.c  stringlist.h
cookbook4python/floater/resultserver/: Jamfile  UI.c  bug.h  commandhash.c  floatcl.c  text.c
cookbook4python/floater/tclcode/: errorhandle.deq  files.tcp  gset.deq  gset.tcp  gui.tcp  matrix.deq  matrix.tcp  matrixbig.tcp  menu.tcp  options_GUI.tcp  pm.tcl  resultreq.tcp  seen.deq  seen.tcp  the_texts.deq  the_texts.tcp
trunk/: Makefile.am  sAi.py
trunk/cookbook4python/asn1/jser/: Makefile
trunk/cookbook4python/floater/common/: README.txt  UI.c  autohelp.c  bits.h  br.h  bug.c  commandhash.h  curdeck.tmp  deal.h  debug.h  floater  heartsrules.h  help.h  maximize.c  rand.h  requote  result.h  score.h  stringlist.h  text.h  tickler.c  util.c  winico.rc.in
trunk/cookbook4python/floater/debian/: README.txt  floater-server.docs  floater.sgml
trunk/cookbook4python/floater/documentation/: BUGS.txt
trunk/cookbook4python/floater/loginserver/: UIback-tk.c  autohelp3.c  computer.c  floatcl.c  floaterl  result.h
trunk/cookbook4python/floater/pseudomailer/: alloc.h  result.c  score.c  tcl2c  tclcode
trunk/cookbook4python/floater/res2html/: Jamfile  alloc.c  bits.h  floatcl.c  heartsrules.h
trunk/cookbook4python/floater/resultserver/: comm.c  computer.h  floater.h  floaterr  tickler.h
trunk/cookbook4python/floater/tclcode/: README.txt  connect.tcp  files.deq  floater.tcl  logo.deq  logo.tcp  mail.tcp  matrixsize.tcp  menu.deq  options_GUI.deq  options_common.tcp  rs.tcl  texts.deq  texts.tcp
trunk/dds10/: CHANGES  LICENSE  dds.cpp  deal  deal.h  dist.c  dll.h  makecounttable.c  readme.txt  setup.py  tcl_incl.h  trydds.py  vector.c
trunk/dds10/docs/html/: advanced.html  ext-ref.html  history.html  holding.html  newfeatures.html
trunk/ddsprogs/: dds  dodds.py  ntraise.dds  pick_dds.pick  test.py
trunk/deal308/: deal  dealtypes.c
trunk/deal308/docs/html/: quickdos.html
trunk/deal308/lib/: utility.tcl
trunk/floater/: Jamrules  config.status  curdeck.tmp
trunk/floater/art/auction/: Makefile
trunk/floater/art/bitmaps/: c_2c._  c_2d._  c_4c._  (+9 more)
trunk/floater/common/: Jamfile  UIback-tk.c  alloc.c  alloc.h  br.c  bug.h  calendar.h  comm.h  deal.c  dequote  floatcl.c  floatcl1.c  help.c
trunk/floater/debian/: floater-server.cron.d  floater.docs
trunk/floater/documentation/: CHANGELOG.txt  CONFUSING.txt  CREDITS.txt
trunk/floater/loginserver/: deal.c  rand.c
trunk/floater/pseudomailer/: bug.c  calendar.c  floatcmd.c  floatcmd.h  rand.h
trunk/floater/res2html/: res2html  text.h
trunk/floater/resultserver/: ref
trunk/floater/serverfiles/: Makefile
trunk/floater/tclcode/: errorhandle.tcp  files.tcl  floater.deq  floater.tcl  floater.tcp  floatert.tcl  gset.deq  gset.tcp  matrix0.deq  res2html.tcl
trunk/guestbook/: app.yaml  index.yaml  ydnFdrWCE.html
trunk/jbridge/: ImageSearch.java  Test.java  aptMine.htm  aptMine.java  jMine.java  lianliankai.java  lianliankai.py
trunk/jscards/: cards.css  test.html
trunk/makoshell/: handyscripts.py  lexerTest.py  main.py  test.py
trunk/makoshell/yaws/: YawsLexer.py  __init__.py  mYawsFileType.py
trunk/mboxtools/: cnv2_mba2mbx.py
trunk/mirrorr/: app.yaml  mirror.py  transform_content.py  waveapp.py
trunk/myproj/: .project  bridge-compile.cmd  bridge-shell.cmd
trunk/myproj/war/: bridge.html
trunk/oldlady/: bidding.py  bridge.py  floater-3server.py  floater-3web-client.py  floater-console-client.py  floater-minibridge-server.py  floater-server.py  floater-web-client.py  floater_client.py  main_cmdline.py  sAi.py  sbridge.py  test_bidding.py  ui.py
trunk/test/: bidder.xml
trunk/tools/: dir2JTreeMapXML.py  dir2compact.py  get.4u.straitline.jp.py  httpforward.py  index.html  m3ua.py  pdfparser.py  pkt_test.py  read_ip.py  scan_comports.py  sctp_client.py  test.py  test_sctp.py  test_winfiol_sea.py  testdnet.py  text2png.py  web-file-upload.py  webcli.py  websucker.py
trunk/tools/oldstuff/: amsn_study.txt  cnv_mba2mbx.py  dbus_test.py  filebrowser.tcl  get_shviva_pic.exp  get_smth_pic.exp  line_edit.exp  line_edit.tcl  tunnel.tcl  wget_wrapper.exp
(+614 files in other folders)
